Fix up tabledrag alignment

--- a/sass/components/block.scss
+++ b/sass/components/block.scss
@@ -4,3 +4,7 @@
   @include type-leader;
   @include type-leader-clear;
 }
+
+td.block {
+  margin: 0;
+}
